# sqlops-guardian

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  sqlops-guardian-full-prompt.md
.claude/: settings.json  settings.local.json
backend/: main.py  pyproject.toml
backend/app/: api.py  case_store.py  cli.py  config.py  linter.py  llm_analyzer.py  models.py  pipeline.py  rag.py  seed_cases.py
backend/cases/: seed_cases.json
backend/samples/: clean_query.sql  dangerous_delete.sql  slow_dashboard.sql
backend/tests/: test_api.py  test_case_store.py  test_llm_analyzer.py  test_pipeline.py  test_rag.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: FeedbackButtons.jsx  FindingsPanel.jsx  LlmAnalysis.jsx  MetricsCards.jsx  PatternChart.jsx  RecentTable.jsx  SeverityBadge.jsx  SimilarCases.jsx  SqlEditor.jsx
frontend/src/pages/: Analyzer.jsx  Dashboard.jsx
