[project]
name = "sqlops-guardian"
version = "0.1.0"
description = "SQL analysis tool that catches anti-patterns and suggests optimizations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.1",
    "fastapi>=0.133.1",
    "google-genai>=1.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
